# image-converter

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/cli/: main.py
src/config/: settings.py
src/core/: converter.py  image_processor.py  s3_client.py
src/utils/: exceptions.py  logger.py
tests/: conftest.py  test_converter.py  test_image_processor.py  test_s3_client.py
